Modification de l'App.config
- Ajout des valeurs de connections.
- Ajout de la connectionString.

:+1:

--- a/FrmSport/App.config
+++ b/FrmSport/App.config
@@ -11,4 +11,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="HOSTMYSQL" value="127.0.0.1"/>
+    <add key="PORTMYSQL" value="3306"/>
+    <add key="DBMYSQL" value="exercicesport"/>
+    <add key="USERMYSQL" value="devsport"/>
+    <add key="PWDMYSQL" value="devsportmdp"/>
+  </appSettings>
+  <connectionStrings>
+    <add name="ConnMysqlLocal" providerName="MySql.Data.MySqlClient" connectionString="Server = {0}; Port={1}; Database = {2}; Uid = {3}; Pwd = {4}" />
+  </connectionStrings>
 </configuration>
