--- a/FrmSport/FrmSport.csproj
+++ b/FrmSport/FrmSport.csproj
@@ -89,7 +89,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClassesTechniques\Sport.cs" />
+    <Compile Include="ClassesTechniques\Bdd.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
